namespace PTProject.Service
{
    public class GoodDTO
    {
        public int GoodId { get; set; }
        public string Name { get; set; }
        public string Description { get; set; }
        public int Price { get; set; }
    }
}
