@startuml

class Catalog {
    -ICatalog _catalog
    -IUsers _users
    -List<Purchase> _purchases
    +void Purchase(int userId, int goodId)
    +void Return(int userId, int goodId)
    +List<Purchase> GetPurchases()
}

class Good {
    +int GoodId
    +string Description
    +int Quantity
    +decimal Price
}

class User {
    +int UserId
    +string UserName
    +UserType UserType
}

class Purchase {
    +int UserId
    +int GoodId
    +DateTime Date
}

Catalog "1" *-- "*" Good : contains
Catalog "1" *-- "*" User : contains
Catalog "1" *-- "*" Purchase : tracks
User "1" -- "0..*" Purchase : makes
Good "1" -- "0..*" Purchase : involved in

@enduml